--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "erlpack": "github:hammerandchisel/erlpack",
     "image-downloader": "^3.2.1",
     "moment": "^2.18.1",
+    "node-wit": "^4.2.0",
     "sharp": "^0.17.3",
     "uws": "^0.14.5"
   },
